# dicer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ast.c  dicer.scm  error.rs  lib.rs
src/aux/: nav.rs  pos.rs  text.rs
src/c/: lexer.c
src/commons/: token.yml  types.yaml
src/core/: frm.rs  mod.rs
src/lng/: mod.rs
src/lng/core/: ops.rs
src/lng/lxr/: mod.rs  tkn.rs
src/lxr/: lxr.rs  mod.rs  tkn.rs
src/python/: pyproject.toml
src/python/dicer/: __init__.py  functions.py  io_ops.py  lexer.py  parser.py  scanner.py  schemes.py  tokens.py
src/python/dicer/legacy/: lexer.py  tree.py
src/scheme/: lexer.scm
