[package]
name = "dicer-rs"
version = "0.1.0" # restarted eeeeeverything
publish = false
edition = "2024"
authors = ["bertrandterrier<mail@immanuelstemmert.de"]

# Metadata
description = "Work in progress -- Experimental programming language. Trying some crazy syntactical concepts, most of them born out of personal quirks and excentricities."
# documentation = https://url..
# homepage = https://url..
repository = "https://github.com/bertrandterrier/dicer"

license = "GPL-2"

[dependencies]


### PROFILES ###
# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0           # controls the `--opt-level` the compiler builds with
debug = true            # controls whether the compiler passes `-g`
rpath = false           # controls whether the compiler passes `-C rpath`
lto = false             # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1       # controls whether the compiler passes `-C codegen-units`
                        # `codegen-units` is ignored when `lto = true`
panic = 'unwind'        # panic strategy (`-C panic=...`), can also be 'abort'

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

# The testing profile, used for `cargo test`.
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

# The benchmarking profile, used for `cargo bench`.
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

# The documentation profile, used for `cargo doc`.
[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'
